Bug 347437 - Marker elements sometimes point backwards. Patch by amenzie@us.ibm.com, r=tor, sr=bz